Kubernetes/Scripts/Kubernetes Objects/Samples/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: nginx-ingress.com
    http:
      paths:
      - backend:
          serviceName: nginx-svc
          servicePort: 80
